even more object oriented initialization

--- a/notebooks/Refactor tests.ipynb
+++ b/notebooks/Refactor tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -50,12 +50,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "params['load_weights_path'] = '../weights/test_50_rec.npz'"
+   ]
   },
   {
    "cell_type": "code",
@@ -68,7 +70,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "train_params ={'save_weights_path': '../weights/test_50_rec.npz'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -80,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -91,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -101,100 +123,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iter 640, Minibatch Loss= 0.202411\n",
-      "Iter 1280, Minibatch Loss= 0.213777\n",
-      "Iter 1920, Minibatch Loss= 0.129500\n",
-      "Iter 2560, Minibatch Loss= 0.179772\n",
-      "Iter 3200, Minibatch Loss= 0.072311\n",
-      "Iter 3840, Minibatch Loss= 0.113412\n",
-      "Iter 4480, Minibatch Loss= 0.084910\n",
-      "Iter 5120, Minibatch Loss= 0.142856\n",
-      "Iter 5760, Minibatch Loss= 0.099546\n",
-      "Iter 6400, Minibatch Loss= 0.132172\n",
-      "Iter 7040, Minibatch Loss= 0.025790\n",
-      "Iter 7680, Minibatch Loss= 0.008105\n",
-      "Iter 8320, Minibatch Loss= 0.010748\n",
-      "Iter 8960, Minibatch Loss= 0.006331\n",
-      "Iter 9600, Minibatch Loss= 0.006036\n",
-      "Iter 10240, Minibatch Loss= 0.006478\n",
-      "Iter 10880, Minibatch Loss= 0.005523\n",
-      "Iter 11520, Minibatch Loss= 0.004862\n",
-      "Iter 12160, Minibatch Loss= 0.004675\n",
-      "Iter 12800, Minibatch Loss= 0.004127\n",
-      "Iter 13440, Minibatch Loss= 0.004599\n",
-      "Iter 14080, Minibatch Loss= 0.003941\n",
-      "Iter 14720, Minibatch Loss= 0.003753\n",
-      "Iter 15360, Minibatch Loss= 0.003615\n",
-      "Iter 16000, Minibatch Loss= 0.003669\n",
-      "Iter 16640, Minibatch Loss= 0.003300\n",
-      "Iter 17280, Minibatch Loss= 0.003469\n",
-      "Iter 17920, Minibatch Loss= 0.003255\n",
-      "Iter 18560, Minibatch Loss= 0.003585\n",
-      "Iter 19200, Minibatch Loss= 0.003162\n",
-      "Iter 19840, Minibatch Loss= 0.003043\n",
-      "Iter 20480, Minibatch Loss= 0.002580\n",
-      "Iter 21120, Minibatch Loss= 0.002398\n",
-      "Iter 21760, Minibatch Loss= 0.002632\n",
-      "Iter 22400, Minibatch Loss= 0.002407\n",
-      "Iter 23040, Minibatch Loss= 0.002421\n",
-      "Iter 23680, Minibatch Loss= 0.002320\n",
-      "Iter 24320, Minibatch Loss= 0.002234\n",
-      "Iter 24960, Minibatch Loss= 0.002144\n",
-      "Iter 25600, Minibatch Loss= 0.002205\n",
-      "Iter 26240, Minibatch Loss= 0.001945\n",
-      "Iter 26880, Minibatch Loss= 0.002114\n",
-      "Iter 27520, Minibatch Loss= 0.001940\n",
-      "Iter 28160, Minibatch Loss= 0.001666\n",
-      "Iter 28800, Minibatch Loss= 0.001669\n",
-      "Iter 29440, Minibatch Loss= 0.001987\n",
-      "Iter 30080, Minibatch Loss= 0.002057\n",
-      "Iter 30720, Minibatch Loss= 0.002110\n",
-      "Iter 31360, Minibatch Loss= 0.002066\n",
-      "Iter 32000, Minibatch Loss= 0.001693\n",
-      "Iter 32640, Minibatch Loss= 0.002580\n",
-      "Iter 33280, Minibatch Loss= 0.001473\n",
-      "Iter 33920, Minibatch Loss= 0.002980\n",
-      "Iter 34560, Minibatch Loss= 0.001868\n",
-      "Iter 35200, Minibatch Loss= 0.002086\n",
-      "Iter 35840, Minibatch Loss= 0.001507\n",
-      "Iter 36480, Minibatch Loss= 0.001535\n",
-      "Iter 37120, Minibatch Loss= 0.001630\n",
-      "Iter 37760, Minibatch Loss= 0.001636\n",
-      "Iter 38400, Minibatch Loss= 0.001641\n",
-      "Iter 39040, Minibatch Loss= 0.001226\n",
-      "Iter 39680, Minibatch Loss= 0.001568\n",
-      "Iter 40320, Minibatch Loss= 0.001465\n",
-      "Iter 40960, Minibatch Loss= 0.001444\n",
-      "Iter 41600, Minibatch Loss= 0.001444\n",
-      "Iter 42240, Minibatch Loss= 0.001359\n",
-      "Iter 42880, Minibatch Loss= 0.001487\n",
-      "Iter 43520, Minibatch Loss= 0.001364\n",
-      "Iter 44160, Minibatch Loss= 0.001171\n",
-      "Iter 44800, Minibatch Loss= 0.001130\n",
-      "Iter 45440, Minibatch Loss= 0.001445\n",
-      "Iter 46080, Minibatch Loss= 0.001614\n",
-      "Iter 46720, Minibatch Loss= 0.001013\n",
-      "Iter 47360, Minibatch Loss= 0.001146\n",
-      "Iter 48000, Minibatch Loss= 0.001082\n",
-      "Iter 48640, Minibatch Loss= 0.001267\n",
-      "Iter 49280, Minibatch Loss= 0.001098\n",
-      "Iter 49920, Minibatch Loss= 0.001058\n",
-      "Optimization finished!\n"
+      "Iter 640, Minibatch Loss= 0.005724\n",
+      "Iter 1280, Minibatch Loss= 0.001250\n",
+      "Iter 1920, Minibatch Loss= 0.001619\n",
+      "Iter 2560, Minibatch Loss= 0.003966\n",
+      "Iter 3200, Minibatch Loss= 0.001161\n",
+      "Iter 3840, Minibatch Loss= 0.000986\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "(118.91323494911194, 54.42045617103577)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-05c4042748f5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgen\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_params\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/Users/david/.ipython/sisyphus2/backend/rnn.pyc\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(self, trial_batch_generator, train_params)\u001b[0m\n\u001b[1;32m    283\u001b[0m         \u001b[0;31m# --------------------------------------------------\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    284\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0msave_weights_path\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 285\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msess\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msave_weights_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    286\u001b[0m             \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Model saved in file: %s\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0msave_weights_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    287\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m//anaconda/lib/python2.7/site-packages/tensorflow/python/client/session.pyc\u001b[0m in \u001b[0;36mrun\u001b[0;34m(self, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m    893\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    894\u001b[0m       result = self._run(None, fetches, feed_dict, options_ptr,\n\u001b[0;32m--> 895\u001b[0;31m                          run_metadata_ptr)\n\u001b[0m\u001b[1;32m    896\u001b[0m       \u001b[0;32mif\u001b[0m \u001b[0mrun_metadata\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    897\u001b[0m         \u001b[0mproto_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf_session\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTF_GetBuffer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrun_metadata_ptr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m//anaconda/lib/python2.7/site-packages/tensorflow/python/client/session.pyc\u001b[0m in \u001b[0;36m_run\u001b[0;34m(self, handle, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m   1122\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mfinal_fetches\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mfinal_targets\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mhandle\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mfeed_dict_tensor\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1123\u001b[0m       results = self._do_run(handle, final_targets, final_fetches,\n\u001b[0;32m-> 1124\u001b[0;31m                              feed_dict_tensor, options, run_metadata)\n\u001b[0m\u001b[1;32m   1125\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1126\u001b[0m       \u001b[0mresults\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m//anaconda/lib/python2.7/site-packages/tensorflow/python/client/session.pyc\u001b[0m in \u001b[0;36m_do_run\u001b[0;34m(self, handle, target_list, fetch_list, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m   1319\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mhandle\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1320\u001b[0m       return self._do_call(_run_fn, self._session, feeds, fetches, targets,\n\u001b[0;32m-> 1321\u001b[0;31m                            options, run_metadata)\n\u001b[0m\u001b[1;32m   1322\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1323\u001b[0m       \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_do_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_prun_fn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_session\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhandle\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeeds\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfetches\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m//anaconda/lib/python2.7/site-packages/tensorflow/python/client/session.pyc\u001b[0m in \u001b[0;36m_do_call\u001b[0;34m(self, fn, *args)\u001b[0m\n\u001b[1;32m   1325\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0m_do_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1326\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1327\u001b[0;31m       \u001b[0;32mreturn\u001b[0m \u001b[0mfn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1328\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0merrors\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mOpError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1329\u001b[0m       \u001b[0mmessage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcompat\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mas_text\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmessage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m//anaconda/lib/python2.7/site-packages/tensorflow/python/client/session.pyc\u001b[0m in \u001b[0;36m_run_fn\u001b[0;34m(session, feed_dict, fetch_list, target_list, options, run_metadata)\u001b[0m\n\u001b[1;32m   1304\u001b[0m           return tf_session.TF_Run(session, options,\n\u001b[1;32m   1305\u001b[0m                                    \u001b[0mfeed_dict\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfetch_list\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget_list\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1306\u001b[0;31m                                    status, run_metadata)\n\u001b[0m\u001b[1;32m   1307\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1308\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_prun_fn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msession\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhandle\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeed_dict\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfetch_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
     }
    ],
    "source": [
-    "model.train(gen, {})"
+    "model.train(gen, train_params)"
    ]
   },
   {
