fixed session management with is_initialized flag

--- a/notebooks/Refactor tests.ipynb
+++ b/notebooks/Refactor tests.ipynb
@@ -171,9 +171,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -191,19 +191,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "tf.reset_default_graph()\n",
     "model = LSTM(params)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -214,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -223,94 +222,94 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iter 640, Minibatch Loss= 0.265057\n",
-      "Iter 1280, Minibatch Loss= 0.150976\n",
-      "Iter 1920, Minibatch Loss= 0.182154\n",
-      "Iter 2560, Minibatch Loss= 0.148721\n",
-      "Iter 3200, Minibatch Loss= 0.131151\n",
-      "Iter 3840, Minibatch Loss= 0.207835\n",
-      "Iter 4480, Minibatch Loss= 0.142024\n",
-      "Iter 5120, Minibatch Loss= 0.104030\n",
-      "Iter 5760, Minibatch Loss= 0.133304\n",
-      "Iter 6400, Minibatch Loss= 0.154815\n",
-      "Iter 7040, Minibatch Loss= 0.118517\n",
-      "Iter 7680, Minibatch Loss= 0.106180\n",
-      "Iter 8320, Minibatch Loss= 0.177641\n",
-      "Iter 8960, Minibatch Loss= 0.116821\n",
-      "Iter 9600, Minibatch Loss= 0.144134\n",
-      "Iter 10240, Minibatch Loss= 0.120444\n",
-      "Iter 10880, Minibatch Loss= 0.145426\n",
-      "Iter 11520, Minibatch Loss= 0.154830\n",
-      "Iter 12160, Minibatch Loss= 0.186992\n",
-      "Iter 12800, Minibatch Loss= 0.155770\n",
-      "Iter 13440, Minibatch Loss= 0.187700\n",
-      "Iter 14080, Minibatch Loss= 0.152824\n",
-      "Iter 14720, Minibatch Loss= 0.182648\n",
-      "Iter 15360, Minibatch Loss= 0.167909\n",
-      "Iter 16000, Minibatch Loss= 0.159927\n",
-      "Iter 16640, Minibatch Loss= 0.168285\n",
-      "Iter 17280, Minibatch Loss= 0.188991\n",
-      "Iter 17920, Minibatch Loss= 0.165944\n",
-      "Iter 18560, Minibatch Loss= 0.141967\n",
-      "Iter 19200, Minibatch Loss= 0.163117\n",
-      "Iter 19840, Minibatch Loss= 0.119930\n",
-      "Iter 20480, Minibatch Loss= 0.188481\n",
-      "Iter 21120, Minibatch Loss= 0.126492\n",
-      "Iter 21760, Minibatch Loss= 0.184314\n",
-      "Iter 22400, Minibatch Loss= 0.100526\n",
-      "Iter 23040, Minibatch Loss= 0.097557\n",
-      "Iter 23680, Minibatch Loss= 0.148928\n",
-      "Iter 24320, Minibatch Loss= 0.089365\n",
-      "Iter 24960, Minibatch Loss= 0.110535\n",
-      "Iter 25600, Minibatch Loss= 0.067116\n",
-      "Iter 26240, Minibatch Loss= 0.112619\n",
-      "Iter 26880, Minibatch Loss= 0.166291\n",
-      "Iter 27520, Minibatch Loss= 0.162547\n",
-      "Iter 28160, Minibatch Loss= 0.066271\n",
-      "Iter 28800, Minibatch Loss= 0.073209\n",
-      "Iter 29440, Minibatch Loss= 0.056950\n",
-      "Iter 30080, Minibatch Loss= 0.053759\n",
-      "Iter 30720, Minibatch Loss= 0.087737\n",
-      "Iter 31360, Minibatch Loss= 0.102746\n",
-      "Iter 32000, Minibatch Loss= 0.086424\n",
-      "Iter 32640, Minibatch Loss= 0.063450\n",
-      "Iter 33280, Minibatch Loss= 0.018607\n",
-      "Iter 33920, Minibatch Loss= 0.015883\n",
-      "Iter 34560, Minibatch Loss= 0.006795\n",
-      "Iter 35200, Minibatch Loss= 0.003086\n",
-      "Iter 35840, Minibatch Loss= 0.006195\n",
-      "Iter 36480, Minibatch Loss= 0.004625\n",
-      "Iter 37120, Minibatch Loss= 0.002865\n",
-      "Iter 37760, Minibatch Loss= 0.002572\n",
-      "Iter 38400, Minibatch Loss= 0.002125\n",
-      "Iter 39040, Minibatch Loss= 0.002757\n",
-      "Iter 39680, Minibatch Loss= 0.001774\n",
-      "Iter 40320, Minibatch Loss= 0.001706\n",
-      "Iter 40960, Minibatch Loss= 0.001640\n",
-      "Iter 41600, Minibatch Loss= 0.001628\n",
-      "Iter 42240, Minibatch Loss= 0.002882\n",
-      "Iter 42880, Minibatch Loss= 0.002949\n",
-      "Iter 43520, Minibatch Loss= 0.001795\n",
-      "Iter 44160, Minibatch Loss= 0.001767\n",
-      "Iter 44800, Minibatch Loss= 0.001750\n",
-      "Iter 45440, Minibatch Loss= 0.001668\n",
-      "Iter 46080, Minibatch Loss= 0.003418\n",
-      "Iter 46720, Minibatch Loss= 0.001713\n",
-      "Iter 47360, Minibatch Loss= 0.001729\n",
-      "Iter 48000, Minibatch Loss= 0.001667\n",
-      "Iter 48640, Minibatch Loss= 0.001291\n",
-      "Iter 49280, Minibatch Loss= 0.001703\n",
-      "Iter 49920, Minibatch Loss= 0.001305\n",
+      "Iter 640, Minibatch Loss= 0.201816\n",
+      "Iter 1280, Minibatch Loss= 0.189352\n",
+      "Iter 1920, Minibatch Loss= 0.208538\n",
+      "Iter 2560, Minibatch Loss= 0.199339\n",
+      "Iter 3200, Minibatch Loss= 0.149084\n",
+      "Iter 3840, Minibatch Loss= 0.195941\n",
+      "Iter 4480, Minibatch Loss= 0.194992\n",
+      "Iter 5120, Minibatch Loss= 0.131237\n",
+      "Iter 5760, Minibatch Loss= 0.167296\n",
+      "Iter 6400, Minibatch Loss= 0.164699\n",
+      "Iter 7040, Minibatch Loss= 0.149677\n",
+      "Iter 7680, Minibatch Loss= 0.126173\n",
+      "Iter 8320, Minibatch Loss= 0.206946\n",
+      "Iter 8960, Minibatch Loss= 0.114169\n",
+      "Iter 9600, Minibatch Loss= 0.142062\n",
+      "Iter 10240, Minibatch Loss= 0.131179\n",
+      "Iter 10880, Minibatch Loss= 0.132193\n",
+      "Iter 11520, Minibatch Loss= 0.176910\n",
+      "Iter 12160, Minibatch Loss= 0.189323\n",
+      "Iter 12800, Minibatch Loss= 0.129096\n",
+      "Iter 13440, Minibatch Loss= 0.141802\n",
+      "Iter 14080, Minibatch Loss= 0.189124\n",
+      "Iter 14720, Minibatch Loss= 0.159418\n",
+      "Iter 15360, Minibatch Loss= 0.171236\n",
+      "Iter 16000, Minibatch Loss= 0.151611\n",
+      "Iter 16640, Minibatch Loss= 0.159427\n",
+      "Iter 17280, Minibatch Loss= 0.141022\n",
+      "Iter 17920, Minibatch Loss= 0.118774\n",
+      "Iter 18560, Minibatch Loss= 0.153073\n",
+      "Iter 19200, Minibatch Loss= 0.192081\n",
+      "Iter 19840, Minibatch Loss= 0.174375\n",
+      "Iter 20480, Minibatch Loss= 0.177208\n",
+      "Iter 21120, Minibatch Loss= 0.152303\n",
+      "Iter 21760, Minibatch Loss= 0.177243\n",
+      "Iter 22400, Minibatch Loss= 0.130997\n",
+      "Iter 23040, Minibatch Loss= 0.090285\n",
+      "Iter 23680, Minibatch Loss= 0.167790\n",
+      "Iter 24320, Minibatch Loss= 0.135711\n",
+      "Iter 24960, Minibatch Loss= 0.160986\n",
+      "Iter 25600, Minibatch Loss= 0.078339\n",
+      "Iter 26240, Minibatch Loss= 0.111707\n",
+      "Iter 26880, Minibatch Loss= 0.161390\n",
+      "Iter 27520, Minibatch Loss= 0.156978\n",
+      "Iter 28160, Minibatch Loss= 0.176015\n",
+      "Iter 28800, Minibatch Loss= 0.142897\n",
+      "Iter 29440, Minibatch Loss= 0.058227\n",
+      "Iter 30080, Minibatch Loss= 0.078222\n",
+      "Iter 30720, Minibatch Loss= 0.145743\n",
+      "Iter 31360, Minibatch Loss= 0.110480\n",
+      "Iter 32000, Minibatch Loss= 0.073294\n",
+      "Iter 32640, Minibatch Loss= 0.044023\n",
+      "Iter 33280, Minibatch Loss= 0.072337\n",
+      "Iter 33920, Minibatch Loss= 0.035240\n",
+      "Iter 34560, Minibatch Loss= 0.015283\n",
+      "Iter 35200, Minibatch Loss= 0.006393\n",
+      "Iter 35840, Minibatch Loss= 0.004571\n",
+      "Iter 36480, Minibatch Loss= 0.003193\n",
+      "Iter 37120, Minibatch Loss= 0.204227\n",
+      "Iter 37760, Minibatch Loss= 0.081100\n",
+      "Iter 38400, Minibatch Loss= 0.019260\n",
+      "Iter 39040, Minibatch Loss= 0.007197\n",
+      "Iter 39680, Minibatch Loss= 0.004925\n",
+      "Iter 40320, Minibatch Loss= 0.004461\n",
+      "Iter 40960, Minibatch Loss= 0.002374\n",
+      "Iter 41600, Minibatch Loss= 0.002337\n",
+      "Iter 42240, Minibatch Loss= 0.002445\n",
+      "Iter 42880, Minibatch Loss= 0.001727\n",
+      "Iter 43520, Minibatch Loss= 0.001816\n",
+      "Iter 44160, Minibatch Loss= 0.001635\n",
+      "Iter 44800, Minibatch Loss= 0.001660\n",
+      "Iter 45440, Minibatch Loss= 0.001616\n",
+      "Iter 46080, Minibatch Loss= 0.001490\n",
+      "Iter 46720, Minibatch Loss= 0.001347\n",
+      "Iter 47360, Minibatch Loss= 0.001590\n",
+      "Iter 48000, Minibatch Loss= 0.001662\n",
+      "Iter 48640, Minibatch Loss= 0.001586\n",
+      "Iter 49280, Minibatch Loss= 0.001308\n",
+      "Iter 49920, Minibatch Loss= 0.001308\n",
       "Optimization finished!\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(170.7626190185547, 70.67482399940491)"
+       "(171.36526584625244, 79.4806900024414)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
