--- a/notebooks/Task Class Demo.ipynb
+++ b/notebooks/Task Class Demo.ipynb
@@ -38,8 +38,7 @@
     "    if t>1500:\n",
     "        y_t[int(coh<0)] = 1.\n",
     "        \n",
-    "    return x_t, y_t, mask_t\n",
-    "        "
+    "    return x_t, y_t, mask_t"
    ]
   },
   {
@@ -124,9 +123,7 @@
     "\n",
     "            x_data += np.sqrt(2*self.alpha*stim_noise*stim_noise)*np.random.randn(N_batch,N_steps,N_in)\n",
     "\n",
-    "            return x_data,y_data,mask\n",
-    "        \n",
-    "        "
+    "            return x_data,y_data,mask"
    ]
   },
   {
@@ -184,7 +181,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "code",
@@ -193,7 +192,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -206,7 +207,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 2.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -217,5 +218,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
