added new object oriented task backend with RDM task

--- a/notebooks/Refactor tests.ipynb
+++ b/notebooks/Refactor tests.ipynb
@@ -8,9 +8,10 @@
    },
    "outputs": [],
    "source": [
-    "from sisyphus2.backend.models.basic import Basic, Basic_sigmoid, Basic_scan\n",
+    "from sisyphus2.backend.models.basic import Basic, BasicSigmoid, BasicScan\n",
     "from sisyphus2.backend.models.lstm import LSTM\n",
-    "from sisyphus2.tasks import task\n",
+    "from sisyphus2.backend import task\n",
+    "#from sisyphus2.tasks import task\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "from matplotlib import pyplot as plt\n",
@@ -863,6 +864,94 @@
    ],
    "source": [
     "model2 = Basic(params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "rdm = task.RDM(N_in = 2, N_out = 2, dt = 10, tau = 100, T = 2000, N_batch = 64)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "x,y,m = rdm.batch_generator().next()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<matplotlib.lines.Line2D at 0x11d619dd0>,\n",
+       " <matplotlib.lines.Line2D at 0x11d619fd0>]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYAAAAD8CAYAAAB+UHOxAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAFztJREFUeJzt3X+MHGd9x/HPZ/eSFCUBEmIcY/uwI9xQt0CIToaqEFqS\ntE5acCgSTYTAbUFWVNIStah1lQpR8UdJadOqUsAyJcJtgdCKRHEr05BYlAjxy5fIMXGCsQlBcXBi\nEyoCBMXZ3W//2NnLk+3d2TOzP+7xvl/S6WZn524eze7OZ5/n+8yuI0IAgMnTGHcDAADjQQAAwIQi\nAABgQhEAADChCAAAmFAEAABMKAIAACYUAQAAE4oAAIAJNTXuBizmvPPOizVr1oy7GQCQjXvvvfeH\nEbHsZLZd0gGwZs0azc7OjrsZAJAN298/2W0ZAgKACUUAAMCEIgAAYEIRAAAwoQgAAJhQAwkA2xtt\nH7B9yPbWee7fZHuf7b22Z22/YRD7BQBUV3saqO2mpJslXS7psKQ9tndGxIPJZrsl7YyIsP1qSf8u\n6ZV19w0AqG4Q1wFskHQoIh6WJNu3StokaS4AIuKnyfZnSlq630N5ZJ/00H+OuxV5Oe0F0oYt0hln\njbslAEoYRACslPRocvuwpNf1b2T7bZL+RtJLJf32Qv/M9hZJWyRpenp6AM0r6Sv/IO2/TZJHv+8s\nFVm+7ELplQs+rACWoJFdCRwRt0u63fYlkj4s6bIFttsuabskzczMjL6n0D4uvfSXpT/66sh3naUn\nHpQ+/qvd4wYgK4MoAj8maXVye1Wxbl4RcY+kC2yfN4B9D16nJTWa425FPhrFe4hOe7ztAFDaIAJg\nj6R1ttfaPl3S1ZJ2phvYfoVtF8sXSzpD0pMD2PfgddrPndRwYr2wJACA7NQ+00VEy/Z1ku6U1JR0\nS0Tst31tcf82SW+X9G7bz0r6uaTfi4ilWQjutAiAMuZ6AK3xtgNAaQM500XELkm7+tZtS5ZvlHTj\nIPY1dARAOQQAkC2uBO7XaVMDKIMAALJFAPSjB1AORWAgWwRAPwKgnLkiMD0AIDcEQD8CoByGgIBs\nEQD9qAGUQwAA2SIA+tEDKIcaAJAtAqAfAVAONQAgWwRAPwKgHFtykwAAMkQA9OOjIMprTBEAQIYI\ngH58GFx5BACQJQKgH0NA5TWmKAIDGSIA+hEA5TWoAQA5IgD6UQMojyEgIEsEQD9qAOURAECWCIB+\nDAGVRw0AyBIB0I8AKI8aAJAlAiDV6UgKAqAshoCALBEAqd5JjBpAOQQAkCUCIDUXAPQASmk0qQEA\nGSIAUgRANY2mFAQAkBsCIEUAVMMQEJAlAiDVG8agBlAOAQBkiQBI0QOohusAgCwRACkCoBquAwCy\nNJAAsL3R9gHbh2xvnef+d9reZ/tbtr9q+zWD2O/AMQ20GoaAgCzVDgDbTUk3S7pC0npJ19he37fZ\n9yS9KSJeJenDkrbX3e9QzNUA6AGUQgAAWRpED2CDpEMR8XBEHJd0q6RN6QYR8dWI+N/i5tclrRrA\nfgcvKAJXQgAAWRpEAKyU9Ghy+3CxbiHvkfSFhe60vcX2rO3ZY8eODaB5JVADqIYLwYAsjbQIbPs3\n1A2Av1hom4jYHhEzETGzbNmy0TVOIgCqogcAZGkQZ7rHJK1Obq8q1j2P7VdL+mdJV0TEkwPY7+AR\nANUQAECWBtED2CNpne21tk+XdLWknekGtqcl3SbpXRHxnQHsczi4EKwaAgDIUu23uhHRsn2dpDsl\nNSXdEhH7bV9b3L9N0gclvUTSx2xLUisiZurue+DoAVRDDQDI0kDOdBGxS9KuvnXbkuX3SnrvIPY1\nVARANfQAgCxxJXCKAKiGAACyRACkuBCsGgIAyBIBkOKjIKrhw+CALBEAKYaAquHD4IAsEQApAqAa\nhoCALBEAKWoA1fQCIGLcLQFQAgGQogZQTS8wozPedgAohQBIMQRUjYunEcNAQFYIgBQBUE3veDET\nCMgKAZAiAKqZCwB6AEBOCIAUReBqCAAgSwRAiiJwNb3jxRAQkBUCIMUQUDX0AIAsEQApAqAaAgDI\nEgGQogZQDQEAZIkASPVOYOawlMI0UCBLnOlSnVb3ZNb91jKcrLkiMD0AICcEQKoXACiHISAgSwRA\nqtMmAKogAIAsEQCpTotrAKqgBgBkiQBIdVqSCYDSqAEAWSIAUtQAqmEICMgSAZCiBlANAQBkaSAB\nYHuj7QO2D9neOs/9r7T9NdvP2P7AIPY5FARANQQAkKXaZzvbTUk3S7pc0mFJe2zvjIgHk81+JOlP\nJF1Vd39DRRG4GorAQJYG0QPYIOlQRDwcEccl3SppU7pBRByNiD2Snh3A/oaHGkA1FIGBLA0iAFZK\nejS5fbhYlx8CoBqGgIAsLbkisO0ttmdtzx47dmy0O6cGUA0BAGRpEAHwmKTVye1VxbpKImJ7RMxE\nxMyyZctqN64UagDVUAMAsjSIANgjaZ3ttbZPl3S1pJ0D+L+jxxBQNY3iaUQPAMhK7bNdRLRsXyfp\nTklNSbdExH7b1xb3b7N9vqRZSS+U1LF9vaT1EfFU3f0PFAFQDUNAQJYGcraLiF2SdvWt25YsP67u\n0NDSRg2gmt4xC4aAgJwsuSLwWFEDqIYeAJAlAiDFEFA1FIGBLBEAKQKgGi4EA7JEAKSoAVTDEBCQ\nJQIgRQ2gGgIAyBIBkGIIqBpqAECWCIAUAVCNuRAMyBEBkKIGUI3dPW4EAJAVAiBFDaA6AgDIDgGQ\nYgiousYUNQAgMwRAigCortGkBwBkhgBIUQOojiEgIDsEQIoaQHUEAJAdAiDFEFB1BACQHQIgRQBU\n12hSBAYyQwD0RHQ/z54AqIYeAJAdAqCn9+6VAKiGAACyQwD09E5eDQ5JJQQAkB3Odj1zAUAPoBJq\nAEB2CICeYAioFnoAQHYIgB5qAPWYK4GB3BAAPXNDQFwIVgmfBQRkhwDooQZQDwEAZIcA6CEA6uHD\n4IDsDCQAbG+0fcD2Idtb57nftv+puH+f7YsHsd+BIgDqoQgMZKd2ANhuSrpZ0hWS1ku6xvb6vs2u\nkLSu+Nki6eN19ztwFIHrIQCA7AyiB7BB0qGIeDgijku6VdKmvm02SfqX6Pq6pBfbXjGAfQ8OReB6\nqAEA2RnE292Vkh5Nbh+W9LqT2GalpCMD2P//M3vT29VoHy/1Ny/o/Ey/JOmp46EXDqNRp7ijT7d0\n9tHv6qGPvmXcTQGy1zr9bG14/2eGvp8lN95he4u6w0Sanp6u9D9e9PT3dVrnmVJ/0wlpb+cC/fiZ\n1XpTpb1Oti8+8ypt6OzXuT9/ZNxNAbL39LMvGsl+BhEAj0landxeVawru40kKSK2S9ouSTMzM1Gl\nQev+arb03xx4/Ce66h/v0cfOXFVllxPvnrOu0L8df5P++/pLxt0UACdpEDWAPZLW2V5r+3RJV0va\n2bfNTknvLmYDvV7SjyNiKMM/VTUbliS1OpUyZ+K1O6GppsfdDAAl1O4BRETL9nWS7pTUlHRLROy3\nfW1x/zZJuyRdKemQpKcl/UHd/Q7aVBEA7U5nzC3JU6sTavJJqkBWBlIDiIhd6p7k03XbkuWQ9L5B\n7GtY5noAbXoAVbQ7MReiAPLAW7ZCb/iizRBQJa1OZy5EAeSBAChQA6iHHgCQHwKgMFWMX9MDqKZb\nAyAAgJwQAAV6APXQAwDyQwAUmAVUT6vNLCAgN7xiC/QA6qEHAOSHACjM9QCYBlpJq9NRkwvBgKwQ\nAAV6APXQAwDyQwAUbKvZMLOAKmIWEJAfAiDRbJgeQEX0AID8EACJqYaZBVQRnwUE5IdXbIIeQHXt\nTqjJswnICi/ZxBQ1gMq6Q0A8nYCc8IpNNBsNegAVtSkCA9khABJTDXMdQEWtTociMJAZAiBBDaA6\negBAfgiARLNhdYIAqKLFNFAgOwRAYooeQCWdTihCTAMFMsMrNtHkOoBKeqHJl8IDeSEAEs2G+U7g\nCnpTZ6kBAHkhABJTTa4DqKJV9JqoAQB5IQASXAdQDT0AIE8EQIIrgauZqwEQAEBWCIBE9zoAisBl\nPdcD4OkE5KTWK9b2ubbvsn2w+H3OAtvdYvuo7Qfq7G/Y6AFUQw8AyFPdt2xbJe2OiHWSdhe35/Mp\nSRtr7mvouBK4mt7HZ1ADAPJSNwA2SdpRLO+QdNV8G0XEPZJ+VHNfQ0cPoJq5WUBcBwBkpW4ALI+I\nI8Xy45KW1/x/Y9VsNLgOoAJmAQF5mjrRBrbvlnT+PHfdkN6IiLBd++xpe4ukLZI0PT1d99+VQg+g\nGmoAQJ5OGAARcdlC99l+wvaKiDhie4Wko3UbFBHbJW2XpJmZmZGejZtNZgFVwSwgIE91X7E7JW0u\nljdLuqPm/xsregDV0AMA8lQ3AD4i6XLbByVdVtyW7ZfZ3tXbyPZnJX1N0oW2D9t+T839DgWzgKrp\nfYAeNQAgLyccAlpMRDwp6dJ51v9A0pXJ7Wvq7GdU6AFU0yuc0wMA8sKgbYLPAqqmF5oNAgDICgGQ\noAdQTTvoAQA5IgAS3e8DYBZQWS2uAwCyRAAk6AFU056rAfB0AnLCKzbRvQ6AACiLHgCQJwIgQQ+g\nmjbfCQxkiQBI9GYBRRACZbS4DgDIEgGQ6M1ioRNQTpsrgYEsEQCJ3jtYPg+oHGoAQJ4IgETvHSx1\ngHKe6wHwdAJywis28VwPgAAogx4AkCcCINE7gbX5UphS2sXFc9QAgLwQAIm5ISBmAZUy1wNgGiiQ\nFQIg0ftCE2oA5TALCMgTAZCYogZQCTUAIE8EQIIaQDXMAgLyxCs20fsoA64DKKfXA6ADAOSFAEg0\nuQ6gknano6mGZZMAQE4IgAQ1gGpanWD8H8gQAZBgFlA17XYwAwjIEAGQoAdQDT0AIE8EQOK5GgBF\n4DLandBUk6cSkBtetYm5HgDTQEtpdUINCsBAdgiABLOAqul0qAEAOaoVALbPtX2X7YPF73Pm2Wa1\n7S/ZftD2ftvvr7PPYXruOgACoAxqAECe6vYAtkraHRHrJO0ubvdrSfqziFgv6fWS3md7fc39DgWz\ngKppdzp8HzCQoboBsEnSjmJ5h6Sr+jeIiCMRcV+x/BNJD0laWXO/Q8EsoGroAQB5qhsAyyPiSLH8\nuKTli21se42k10r6Rs39DgWzgKppUwMAsjR1og1s3y3p/HnuuiG9ERFhe8G3zrbPkvR5SddHxFOL\nbLdF0hZJmp6ePlHzBooeQDXdHgDzCYDcnDAAIuKyhe6z/YTtFRFxxPYKSUcX2O40dU/+n46I206w\nv+2StkvSzMzMSM/EzAKqhh4AkKe6b9t2StpcLG+WdEf/Bu5+QtgnJT0UETfV3N9Q9T7OmOsAyqEG\nAOSpbgB8RNLltg9Kuqy4Ldsvs72r2ObXJL1L0ptt7y1+rqy536HofaUhPYByep8GCiAvJxwCWkxE\nPCnp0nnW/0DSlcXyVyRlcXagBlBNq00PAMgRlbsEs4Cq6X4WEAEA5IYASNADqIZZQECeeNUmmAVU\nDbOAgDwRAIm5WUAEQCnMAgLyRAAk6AFUwywgIE8EQILvA6iGHgCQJwIg0WhYNrOAyqIGAOSJAOjT\ntKkBlNS9DoCnEpAbXrV9mg2rHQRAGfQAgDwRAH2mGlabGkAprU7MfYwGgHwQAH2aDYaAymIWEJAn\nAqDPVLPBNNCSWp1QwwQAkBsCoA89gPKoAQB5IgD6TDXMNNCS2tQAgCwRAH3oAZRHDwDIEwHQp9sD\nIABOVkTwaaBApnjV9qEHUE7vUNEDAPJDAPSZajS4DqCEVlEv4bOAgPwQAH3oAZTTGy6jBwDkhwDo\nM9VkFlAZvbCkBwDkhwDoQw+gnN5wGT0AID8EQB9mAZUz1wNo8lQCcsOrtg89gHKoAQD5IgD6TDX4\nLKAymAUE5KtWANg+1/Zdtg8Wv8+ZZ5tfsP1N2/fb3m/7r+vsc9joAZRDDwDIV90ewFZJuyNinaTd\nxe1+z0h6c0S8RtJFkjbafn3N/Q4NnwVUDrOAgHzVDYBNknYUyzskXdW/QXT9tLh5WvGzZN9iNxvm\nS+FLeK4HwGgikJupmn+/PCKOFMuPS1o+30a2m5LulfQKSTdHxDdq7ndopprWw8d+pstv+vK4m5KF\nZ1q9GsCYGwKgtBMGgO27JZ0/z103pDciImzP+9Y5ItqSLrL9Ykm32/6ViHhggf1tkbRFkqanp0/U\nvIF7x8zqke8zdzNrztHMmnPH3QwAJTlqfAG67QOSfj0ijtheIel/IuLCE/zNByU9HRF/d6L/PzMz\nE7Ozs5XbBwCTxva9ETFzMtvW7bjvlLS5WN4s6Y55GrOseOcv2y+QdLmkb9fcLwCgproB8BFJl9s+\nKOmy4rZsv8z2rmKbFZK+ZHufpD2S7oqI/6q5XwBATbWKwBHxpKRL51n/A0lXFsv7JL22zn4AAIPH\n3A0AmFAEAABMKAIAACYUAQAAE4oAAIAJVetCsGGzfUzS9yv++XmSfjjA5gwK7SpvqbaNdpVDu8qr\n0raXR8Syk9lwSQdAHbZnT/ZquFGiXeUt1bbRrnJoV3nDbhtDQAAwoQgAAJhQp3IAbB93AxZAu8pb\nqm2jXeXQrvKG2rZTtgYAAFjcqdwDAAAs4pQLANsbbR+wfcj2fN9RPKp2rLb9JdsP2t5v+/3F+g/Z\nfsz23uLnyjG17xHb3yraMFusO9f2XbYPFr/PGXGbLkyOy17bT9m+fhzHzPYtto/afiBZt+Dxsf2X\nxXPugO3fGkPbPmr727b32b49+Qj2NbZ/nhy7bSNu14KP3aiO2QLt+lzSpkds7y3Wj/J4LXSOGN3z\nLCJOmR9JTUnflXSBpNMl3S9p/ZjaskLSxcXy2ZK+I2m9pA9J+sASOFaPSDqvb93fStpaLG+VdOOY\nH8vHJb18HMdM0iWSLpb0wImOT/G43i/pDElri+dgc8Rt+01JU8XyjUnb1qTbjeGYzfvYjfKYzdeu\nvvv/XtIHx3C8FjpHjOx5dqr1ADZIOhQRD0fEcUm3qvvF9SMXEUci4r5i+SeSHpK0chxtKWGTpB3F\n8g5JV42xLZdK+m5EVL0QsJaIuEfSj/pWL3R8Nkm6NSKeiYjvSTqk7nNxZG2LiC9GRKu4+XVJq4a1\n/zLtWsTIjtli7bJtSe+Q9Nlh7Hsxi5wjRvY8O9UCYKWkR5Pbh7UETrq216j7nQjfKFb9cdFVv2XU\nwyyJkHS37XuL72GWpOURcaRYflzS8vE0TZJ0tZ7/olwKx2yh47PUnnd/KOkLye21xXDGl22/cQzt\nme+xWyrH7I2SnoiIg8m6kR+vvnPEyJ5np1oALDm2z5L0eUnXR8RTkj6u7hDVRZKOqNv9HIc3RMRF\nkq6Q9D7bl6R3RrfPOZYpYrZPl/RWSf9RrFoqx2zOOI/PYmzfIKkl6dPFqiOSpovH+k8lfcb2C0fY\npCX32PW5Rs9/ozHy4zXPOWLOsJ9np1oAPCZpdXJ7VbFuLGyfpu4D++mIuE2SIuKJiGhHREfSJzTE\noYLFRMRjxe+jkm4v2vGE7RVF21dIOjqOtqkbSvdFxBNFG5fEMdPCx2dJPO9s/76k35H0zuLEoWK4\n4Mli+V51x41/cVRtWuSxG/sxsz0l6Xclfa63btTHa75zhEb4PDvVAmCPpHW21xbvIq9W94vrR64Y\nW/ykpIci4qZk/Ypks7dJeqD/b0fQtjNtn91bVreA+IC6x2pzsdlmSXeMum2F570rWwrHrLDQ8dkp\n6WrbZ9heK2mdpG+OsmG2N0r6c0lvjYink/XLbDeL5QuKtj08wnYt9NiN/Zip+z3m346Iw70Vozxe\nC50jNMrn2Siq3aP8Ufe7iL+jbnLfMMZ2vEHdrts+SXuLnysl/aukbxXrd0paMYa2XaDubIL7Je3v\nHSdJL5G0W9JBSXdLOncMbTtT0pOSXpSsG/kxUzeAjkh6Vt2x1vcsdnwk3VA85w5IumIMbTuk7vhw\n77m2rdj27cVjvFfSfZLeMuJ2LfjYjeqYzdeuYv2nJF3bt+0oj9dC54iRPc+4EhgAJtSpNgQEADhJ\nBAAATCgCAAAmFAEAABOKAACACUUAAMCEIgAAYEIRAAAwof4Pq3OkItxH4Q4AAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x11d496b50>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.plot(x[0,:,:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<matplotlib.lines.Line2D at 0x11d6b0bd0>,\n",
+       " <matplotlib.lines.Line2D at 0x11d6b0dd0>]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXcAAAD8CAYAAACMwORRAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEMpJREFUeJzt3X+s3Xddx/Hnm5YR5deAVjLaXlpiQWsUxOskcfwwE2gX\noaLGdBCBCWkWGYEYIzUkQOQvJBhiGNQKzVCQEsOQaopDjMIfMF2L3Y8yCndlsJaxdUDECGGUvv3j\nfjvPrr3fz+l27vne9+H5SJp7zvd+1/PO95zXi8/93u+XRmYiSZotjxh6AEnS5FnukjSDLHdJmkGW\nuyTNIMtdkmaQ5S5JM8hyl6QZZLlL0gyy3CVpBq0d6oXXrVuXmzdvHurlJamkI0eO3JeZ61v7DVbu\nmzdv5vDhw0O9vCSVFBFfG2c/T8tI0gyy3CVpBlnukjSDLHdJmkGWuyTNoGa5R8T+iLg3Im5b5vsR\nEX8REQsRcUtEPHvyY0qSLsQ4K/frgO09398BbO3+7Abe9/DHkiQ9HM3r3DPzsxGxuWeXncBf5+K/\n13djRFwcEZdk5t0TmlGrwX9+GL5z59BTSLNh7jnw05ev6EtM4iamDcBdI89Pdtv+X7lHxG4WV/fM\nzc1N4KU1FT/8PnziD7onMego0ky47I0lyn1smbkP2AcwPz/vv8xdxdkfLX594Z/Cr75h2FkkjWUS\nV8ucAjaNPN/YbdOsyLOLX8OLq6QqJpHWg8Aru6tmngP8l+fbZ4zlLpXTPC0TER8BXgCsi4iTwFuB\nRwJk5l7gEHAFsAB8D7hqpYbVQCx3qZxxrpa5svH9BF43sYm0+mT36xHLXSrDtKrNlbtUjmlV2wPl\n7mWQUhWWu9pcuUvlmFa1We5SOaZVbZa7VI5pVZvlLpVjWtVmuUvlmFa1We5SOaZVbd7EJJVjWtXm\nyl0qx7SqzZuYpHIsd7W5cpfKMa1qs9ylckyr2ix3qRzTqjbLXSrHtKrNcpfKMa1q8zp3qRzTqjZX\n7lI5plVtXuculWO5q82Vu1SOaVWb5S6VY1o1Bn+hKlVjWtXmyl0qx7SqzXKXyjGtarPcpXJMq9os\nd6kc06o271CVyjGtavMmJqkcy11tnpaRyjGtarPcpXJMq9osd6kc06o2y10qx7SqzXKXyjGtarPc\npXJMq9q8zl0qZ6y0RsT2iDgeEQsRsec83398RPxDRNwcEcci4qrJj6rBuHKXymmmNSLWANcCO4Bt\nwJURsW3Jbq8DvpiZzwReALwrIi6a8KwaijcxSeWMsxS7FFjIzBOZeT9wANi5ZJ8EHhsRATwG+DZw\nZqKTajiu3KVyxknrBuCukecnu22j3gP8LPAN4FbgDZnnGuH/RMTuiDgcEYdPnz79EEfW1FnuUjmT\nSuuLgaPAU4BnAe+JiMct3Skz92XmfGbOr1+/fkIvrRVnuUvljJPWU8Cmkecbu22jrgKuz0ULwFeB\nn5nMiBqc5S6VM05abwK2RsSW7peku4CDS/b5OnA5QEQ8GXgGcGKSg2pAlrtUztrWDpl5JiKuAW4A\n1gD7M/NYRFzdfX8v8Hbguoi4FQjgTZl53wrOrWmy3KVymuUOkJmHgENLtu0defwN4EWTHU2rhjcx\nSeWYVrW5cpfKMa1q8yYmqRzLXW0P3LJguUtVWO5q87SMVI5pVZvlLpVjWtVmuUvlmFa1We5SOaZV\nbZa7VI5pVZs3MUnlmFa1uXKXyjGtavMmJqkcy11teRYIy10qxHJXW571lIxUjIlVm+UulWNi1Wa5\nS+WYWLVZ7lI5JlZtmZa7VIyJVZsrd6kcE6s2y10qx8SqLc96jbtUjOWuNlfuUjkmVm2Wu1SOiVWb\n5S6VY2LVZrlL5ZhYtVnuUjkmVm3exCSVY2LV5spdKsfEqs3r3KVyLHe1eVpGKsfEqs3TMlI5JlZt\nlrtUjolVm+UulWNi1Wa5S+WYWLVZ7lI5YyU2IrZHxPGIWIiIPcvs84KIOBoRxyLiM5MdU4Pyahmp\nnLWtHSJiDXAt8ELgJHBTRBzMzC+O7HMx8F5ge2Z+PSJ+aqUG1gC8zl0qZ5zl2KXAQmaeyMz7gQPA\nziX7vBy4PjO/DpCZ9052TA3K0zJSOeMkdgNw18jzk922UU8HnhAR/xYRRyLilZMaUKuA5S6V0zwt\ncwF/zy8BlwM/AXw+Im7MzC+P7hQRu4HdAHNzcxN6aa04y10qZ5zEngI2jTzf2G0bdRK4ITP/JzPv\nAz4LPHPpX5SZ+zJzPjPn169f/1Bn1rRZ7lI54yT2JmBrRGyJiIuAXcDBJft8ArgsItZGxE8CvwLc\nPtlRNRjLXSqneVomM89ExDXADcAaYH9mHouIq7vv783M2yPin4BbgLPA+zPztpUcXFNkuUvljHXO\nPTMPAYeWbNu75Pk7gXdObjStGl7nLpVjYtXmde5SOZa72jwtI5VjYtVmuUvlmFi1We5SOSZWbZa7\nVI6JVZvlLpVjYtVmuUvlmFi1eZ27VI6JVZvXuUvlWO5q87SMVI6JVZsrd6kcy11trtylckys2ix3\nqRwTqzbLXSrHxKrNcpfKMbFq8zp3qRwTqzZX7lI5JlZtXgoplWO5q82Vu1SOiVWb5S6VY2LVZrlL\n5ZhYtVnuUjkmVm2Wu1SOiVWb17lL5ZhYtblyl8oxsWqz3KVyTKzavIlJKsdyV5srd6kcE6s2y10q\nx8SqzXKXyjGxarPcpXJMrPplAl7nLlVjYtUvc/Gr5S6VYmLVL88ufrXcpVJMrPo9UO5e5y5VMla5\nR8T2iDgeEQsRsadnv1+OiDMR8TuTG1GDcuUuldRMbESsAa4FdgDbgCsjYtsy+70D+NSkh9SQPOcu\nVTROYi8FFjLzRGbeDxwAdp5nv9cDHwPuneB8Gpord6mkcRK7Abhr5PnJbtsDImID8DLgfZMbTauC\n5S6VNKnEvht4U+a5Jji/iNgdEYcj4vDp06cn9NJaUZa7VNLaMfY5BWwaeb6x2zZqHjgQi1dUrAOu\niIgzmfn3oztl5j5gH8D8/Hw+1KE1RZa7VNI45X4TsDUitrBY6ruAl4/ukJlbzj2OiOuAf1xa7CrK\nm5ikkprlnplnIuIa4AZgDbA/M49FxNXd9/eu8Iwakit3qaRxVu5k5iHg0JJt5y31zHz1wx9Lq4Y3\nMUkluRxTP1fuUkkmVv0sd6kkE6t+lrtUkolVP8tdKsnEqp/lLpVkYtXPcpdKMrHq501MUkkmVv1c\nuUslmVj18yYmqSTLXf1cuUslmVj1s9ylkkys+lnuUkkmVv0sd6kkE6t+lrtUkolVP8tdKsnEqp83\nMUklmVj18zp3qSTLXf3OlTuWu1SJ5a5+nnOXSjKx6me5SyWZWPWz3KWSTKz6We5SSSZW/Sx3qSQT\nq36Wu1SSiVU/b2KSSjKx6ufKXSrJxKqfd6hKJVnu6ufKXSrJxKqf5S6VZGLVz3KXSjKx6me5SyWZ\nWPWz3KWSTKz6eZ27VJKJVT9X7lJJJlb9vM5dKmmsco+I7RFxPCIWImLPeb7/ioi4JSJujYjPRcQz\nJz+qBuHKXSqpmdiIWANcC+wAtgFXRsS2Jbt9FXh+Zv488HZg36QH1UAsd6mkcRJ7KbCQmScy837g\nALBzdIfM/Fxmfqd7eiOwcbJjajCWu1TSOIndANw18vxkt205rwE++XCG0ipiuUslrZ3kXxYRv8Zi\nuV+2zPd3A7sB5ubmJvnSWimWu1TSOIk9BWwaeb6x2/YgEfELwPuBnZn5rfP9RZm5LzPnM3N+/fr1\nD2VeTZvlLpU0TmJvArZGxJaIuAjYBRwc3SEi5oDrgd/LzC9PfkwNxpuYpJKap2Uy80xEXAPcAKwB\n9mfmsYi4uvv+XuAtwJOA98bi9dBnMnN+5cbW1Lhyl0oa65x7Zh4CDi3Ztnfk8WuB1052NK0K3sQk\nleRyTP08LSOVZGLVz9MyUkkmVv0sd6kkE6t+lrtUkolVP8tdKsnEqp/lLpVkYtXPq2Wkkkys+rly\nl0oysernTUxSSZa7+uVZICx3qRjLXf3yrKdkpIJMrfpZ7lJJplb9LHepJFOrfpa7VJKpVT/LXSrJ\n1KpfpuUuFTTRfyB7Gj70oQ/w/DvfPfQYPzae8KNv8wjOctVffn7oUaSZse0pj+OtL/m5FX2NcuX+\ngzWP5tTauaHH+LFxau0cdzzy6UOPIekCRZ77/w6Zsvn5+Tx8+PAgry1JVUXEkXH+jWpPpkrSDLLc\nJWkGWe6SNIMsd0maQZa7JM0gy12SZpDlLkkzyHKXpBk02E1MEXEa+NpD/M/XAfdNcJxJWq2zOdeF\nWa1zweqdzbkuzEOd66mZub6102Dl/nBExOFx7tAawmqdzbkuzGqdC1bvbM51YVZ6Lk/LSNIMstwl\naQZVLfd9Qw/QY7XO5lwXZrXOBat3Nue6MCs6V8lz7pKkflVX7pKkHuXKPSK2R8TxiFiIiD0DzrEp\nIv41Ir4YEcci4g3d9rdFxKmIONr9uWKA2e6MiFu71z/cbXtiRPxzRHyl+/qEAeZ6xshxORoR342I\nNw5xzCJif0TcGxG3jWxb9hhFxJ90n7njEfHiKc/1zoj4UkTcEhEfj4iLu+2bI+L7I8dt75TnWvZ9\nm9bx6pntoyNz3RkRR7vtUzlmPf0wvc9YZpb5A6wB7gCeBlwE3AxsG2iWS4Bnd48fC3wZ2Aa8Dfij\ngY/TncC6Jdv+DNjTPd4DvGMVvJffBJ46xDEDngc8G7itdYy69/Vm4FHAlu4zuGaKc70IWNs9fsfI\nXJtH9xvgeJ33fZvm8VputiXffxfwlmkes55+mNpnrNrK/VJgITNPZOb9wAFg5xCDZObdmfmF7vF/\nA7cDG4aYZUw7gQ92jz8I/OaAswBcDtyRmQ/1RraHJTM/C3x7yebljtFO4EBm/iAzvwossPhZnMpc\nmfmpzDzTPb0R2LgSr32hc/WY2vFqzRYRAfwu8JGVev1lZlquH6b2GatW7huAu0aen2QVFGpEbAZ+\nEfj3btPrux+h9w9x+gNI4NMRcSQidnfbnpyZd3ePvwk8eYC5Ru3iwYEb+pjB8sdoNX3ufh/45Mjz\nLd3phc9ExHMHmOd879tqOl7PBe7JzK+MbJvqMVvSD1P7jFUr91UnIh4DfAx4Y2Z+F3gfi6eNngXc\nzeKPhNN2WWY+C9gBvC4injf6zVz8OXCwy6Qi4iLgpcDfdZtWwzF7kKGP0flExJuBM8CHu013A3Pd\ne/2HwN9GxOOmONKqe9/O40oevIiY6jE7Tz88YKU/Y9XK/RSwaeT5xm7bICLikSy+cR/OzOsBMvOe\nzPxRZp4F/ooV/HF0OZl5qvt6L/DxboZ7IuKSbu5LgHunPdeIHcAXMvMeWB3HrLPcMRr8cxcRrwZ+\nA3hFVwp0P8J/q3t8hMXztE+f1kw979vgxwsgItYCvwV89Ny2aR6z8/UDU/yMVSv3m4CtEbGlW/3t\nAg4OMUh3Lu8DwO2Z+ecj2y8Z2e1lwG1L/9sVnuvREfHYc49Z/GXcbSwep1d1u70K+MQ051riQaup\noY/ZiOWO0UFgV0Q8KiK2AFuB/5jWUBGxHfhj4KWZ+b2R7esjYk33+GndXCemONdy79ugx2vErwNf\nysyT5zZM65gt1w9M8zO20r81XoHfQl/B4m+e7wDePOAcl7H4I9UtwNHuzxXA3wC3dtsPApdMea6n\nsfhb95uBY+eOEfAk4F+ArwCfBp440HF7NPAt4PEj26Z+zFj8H5e7gR+yeH7zNX3HCHhz95k7DuyY\n8lwLLJ6PPfc529vt+9vde3wU+ALwkinPtez7Nq3jtdxs3fbrgKuX7DuVY9bTD1P7jHmHqiTNoGqn\nZSRJY7DcJWkGWe6SNIMsd0maQZa7JM0gy12SZpDlLkkzyHKXpBn0vyOPVJkr70YXAAAAAElFTkSu\nQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x11d713390>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.plot(y[0,:,:])"
    ]
   },
   {
